@@ -41,9 +41,6 @@ partial_name_scan: yes
 // [GM] Can use all skills? (No or mimimum GM level)
 gm_all_skill: no
 
-// [GM] Can use all abracadabra skills? (No minimum GM level)
-gm_all_skill_add_abra: no
-
 // [GM] Can equip anything? (No or minimum GM level, can cause client errors.)
 gm_all_equipment: no
 
